Replace Collections.singletonList() on List.of()